<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bdc2e8">

    <TextView
        android:id="@+id/conversionType"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:paddingTop="12dp"
        android:text="@string/prefix_conversion"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/laptop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.891" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="370dp"
        android:layout_height="565dp"
        android:layout_marginTop="444dp"
        android:src="@drawable/ellipse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="416dp"
        android:src="@drawable/ellipse_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-118dp">

        <TextView
            android:id="@+id/conversionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/prefix_expression"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/prefixexpretionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textStyle="normal"
            android:textSize="20sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/edittext"
            android:textColorHint="#BF000000"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:hint="@string/enter_expression"
            android:lineHeight="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"

            >

            <Button
                android:id="@+id/prefixconvertBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/convertbtn"
                android:text="@string/convert"
                android:textStyle="bold" />

            <Button
                android:id="@+id/prefixresetBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/convertbtn"
                android:text="Reset"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="51dp">

        <TextView
            android:id="@+id/prefixoutputExpretionType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:shadowColor="@color/black"
            android:text="@string/output"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/prefixoutputExpretion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:outlineAmbientShadowColor="@color/black"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/prefixConversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:outlineAmbientShadowColor="@color/black"
            android:outlineSpotShadowColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/resetbtn"
            android:text="Prefix/Postfix" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>